add advanced docs

--- a/Editor/Naive.DocumentBuilder.Editor.asmdef
+++ b/Editor/Naive.DocumentBuilder.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Naive.DocumentBuilder,Editor",
+    "name": "Naive.DocumentBuilder.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
