Sort folder structure

--- a/DocumentBuilder/UIElementExtension/Editor/Naive.UIElementExtension.Editor.asmdef
+++ b/DocumentBuilder/UIElementExtension/Editor/Naive.UIElementExtension.Editor.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "Naive.DocumentBuilder.Runtime",
+    "name": "Naive.UIElementExtension.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:45db4eb6f2823c3428607863a9078e0c"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
