--- a/DocumentBuilder/Editor/Naive.DocumentBuilder.Editor.asmdef
+++ b/DocumentBuilder/Editor/Naive.DocumentBuilder.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Naive.DoucmentBuilder.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:39998dbcc539eae4599a6b2e71b42b8c"
+        "GUID:39998dbcc539eae4599a6b2e71b42b8c",
+        "GUID:45db4eb6f2823c3428607863a9078e0c"
     ],
     "includePlatforms": [
         "Editor"
